correction overflow

--- a/main.scss
+++ b/main.scss
@@ -42,6 +42,10 @@ h6 {
   box-sizing: border-box;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   font-family: "Nunito", Arial, Verdana, sans-serif;
   /* 1rem = 14px, 87.5% = 14px*/
@@ -69,7 +73,6 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100%;
-  overflow-x: hidden;
 }
 
 .container {
